# octave-add

./: .gitignore  Cargo.toml  Xargo.toml  build.ps1  build.rs  build.sh
.cargo/: config
src/: add.cc  lib.rs
